2009-02-10  Andreas Kupries  <andreask@activestate.com>

	* traverse.man: Fixed bug in the requirements, this package
	* traverse.tcl: needs fileutil (-> fullnormalize). Bumped
	* pkgIndex.tcl: version to 0.4.1.

2009-02-05  Andreas Kupries  <andreask@activestate.com>

	* fileutil.tcl (::fileutil::stripPath): Fixed handling
	* fileutil.man: of letter-case on windows, comparisons
	* strip.test: have to be case-insensitive. Bumped version
	* pkgIndex.tcl: to 1.13.6. See [SF Tcllib Bug 2499641].

2008-12-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11.1 ========================
	* 

2008-12-02  Andreas Kupries  <andreask@activestate.com>

	* fileutil.man: Fixed [Bug 2376321] (fileutil::TempDir, use
	* fileutil.tcl: of env(TRASHFOLDER) for OSX). Bumped version
	* pkgIndex.tcl: to 1.13.5. 

2008-10-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11 ========================
	* 

2008-10-10  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* multiop.test: Canonicalized sorting of two test results.
	* multi.test: 

2008-09-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* multiop.tcl: Sync'd to 2008 Sep 3 change in wip-core, using
	* multiop.man: the new name of the wip processor component.
	* pkgIndex.tcl: Bumped version to 0.5.2.

2008-06-20  Andreas Kupries  <andreask@activestate.com>

	* multiop.tcl: Fixed usage of struct::stack. Now using the
	* multiop.man: official construction command instead of an
	* pkgIndex.tcl: internal command recently removed from the
	  struct::stack package. Bumped version to 0.5.1.

2008-05-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* multi.man: Updated to changes in doctools (sub)section reference
	  handling.

2008-02-27  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* traverse.tcl: Made snit dependency more strict, requesting 1.3+.
