@@ -1,10 +1,10 @@
 [comment {-*- tcl -*- doctools manpage}]
-[manpage_begin fileutil::multi::op n 0.5.2]
+[manpage_begin fileutil::multi::op n 0.5.3]
 [moddesc   {file utilities}]
 [titledesc {Multi-file operation, scatter/gather}]
 [category  {Programming tools}]
 [require Tcl 8.4]
-[require fileutil::multi::op [opt 0.5.2]]
+[require fileutil::multi::op [opt 0.5.3]]
 [require wip [opt 1.0]]
 [description]
 [keywords {file utilities} copy move remove multi-file]
